--- a/src/style.css
+++ b/src/style.css
@@ -61,8 +61,8 @@ body{
 
 .start,
 .end{
-  height: 50px;
-  width: 150px;
+  height: 50%;
+  width: calc(100vh / 3);
   border-radius: .5rem;
   border: 2px solid black;
   background-color: white;
