--- a/src/style.css
+++ b/src/style.css
@@ -7,35 +7,36 @@
 }
 body{
  width: 100vw;
- height: 100vh;
  display: flex;
  flex-direction: column;
-
 }
 
 .banner{
-  height: 20%;
+  height: 100px;
   display: grid;
   place-items: center;
 }
 
 .container{
- display: flex;
- align-items: center;
- justify-content: space-evenly;
- width: 100%;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 90%;
+  gap: 50px;
 }
 
 .footer{
   display: grid;
   place-items: center;
-  height: 20%;
+  height: 100px;
 }
 
 .boardOne,
 .boardTwo {
   aspect-ratio: 1/1;
-  width: 30%;
+  width: 60%;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   place-items: center;
@@ -71,7 +72,7 @@ body{
 
 .shipHolder{
   height: calc( (100vw / 100 * 30) - 4px );
-  width: 10%;
+  width: 30%;
   display: grid;
   grid-template-rows: 40% repeat(5, 1fr);
 }
@@ -114,4 +115,11 @@ body{
   right: 5%;
   width: 20%;
   transform: rotate(180deg);
+}
+
+@media screen and (min-width: 600px){
+  .container{
+    flex-direction: row;
+    margin: 30px 50px;
+  }
 }
